--- a/PHYS561/refs.bib
+++ b/PHYS561/refs.bib
@@ -51,7 +51,8 @@
     volume = "116",
     number = "6",
     pages = "061102",
-    year = "2016"
+    year = "2016",
+    url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.061102}
 }
 
 @article{PhysRevLett.3.439,
@@ -103,9 +104,11 @@
     author = "Walsh, D. and Carswell, R. F. and Weymann, R. J.",
     title = "{0957 + 561 A, B - Twin quasistellar objects or gravitational lens}",
     doi = "10.1038/279381a0",
+    url = {https://ui.adsabs.harvard.edu/abs/1979Natur.279..381W},
     journal = "Nature",
     volume = "279",
     pages = "381--384",
+    month = may,
     year = "1979"
 }
 
@@ -150,7 +153,7 @@
        volume = {287},
         pages = {538-548},
           doi = {10.1086/162712},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1984ApJ...287..538G},
+       url = {https://ui.adsabs.harvard.edu/abs/1984ApJ...287..538G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -179,20 +182,20 @@
        volume = {241},
         pages = {507-520},
           doi = {10.1086/158365},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1980ApJ...241..507Y},
+       url = {https://ui.adsabs.harvard.edu/abs/1980ApJ...241..507Y},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{1964MNRAS128307R,
        author = {{Refsdal}, S.},
         title = "{On the possibility of determining Hubble's parameter and the masses of galaxies from the gravitational lens effect}",
-      journal = {mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
          year = 1964,
         month = jan,
        volume = {128},
         pages = {307},
           doi = {10.1093/mnras/128.4.307},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1964MNRAS.128..307R},
+       url = {https://ui.adsabs.harvard.edu/abs/1964MNRAS.128..307R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -255,7 +258,7 @@
 }
 
 @article{Riess_2019,
-   title={Large Magellanic Cloud Cepheid Standards Provide a 1% Foundation for the Determination of the Hubble Constant and Stronger Evidence for Physics beyond $\Lambda$CDM},
+   title={{Large Magellanic Cloud Cepheid Standards Provide a 1\% Foundation for the Determination of the Hubble Constant and Stronger Evidence for Physics beyond $\Lambda$CDM}},
    volume={876},
    ISSN={1538-4357},
    url={http://dx.doi.org/10.3847/1538-4357/ab1422},
@@ -269,3 +272,95 @@
    pages={85}
 }
 
+@article{Ellis2010darkmatter,
+author = {Ellis, Richard S. },
+title = {Gravitational lensing: a unique probe of dark matter and dark energy},
+journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+volume = {368},
+number = {1914},
+pages = {967-987},
+year = {2010},
+doi = {10.1098/rsta.2009.0209},
+
+URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2009.0209},
+eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2009.0209}
+,
+    abstract = { I review the development of gravitational lensing as a powerful tool of the observational cosmologist. After the historic eclipse expedition organized by Arthur Eddington and Frank Dyson, the subject lay observationally dormant for 60 years. However, subsequent progress has been astonishingly rapid, especially in the past decade, so that gravitational lensing now holds the key to unravelling the two most profound mysteries of our Universe—the nature and distribution of dark matter, and the origin of the puzzling cosmic acceleration first identified in the late 1990s. In this non-specialist review, I focus on the unusual history and achievements of gravitational lensing and its future observational prospects. }
+}
+
+@article{Meneghetti_2020,
+   title={An excess of small-scale gravitational lenses observed in galaxy clusters},
+   volume={369},
+   ISSN={1095-9203},
+   url={http://dx.doi.org/10.1126/science.aax5164},
+   DOI={10.1126/science.aax5164},
+   number={6509},
+   journal={Science},
+   publisher={American Association for the Advancement of Science (AAAS)},
+   author={Meneghetti, Massimo and Davoli, Guido and Bergamini, Pietro and Rosati, Piero and Natarajan, Priyamvada and Giocoli, Carlo and Caminha, Gabriel B. and Metcalf, R. Benton and Rasia, Elena and Borgani, Stefano and et al.},
+   year={2020},
+   month={Sep},
+   pages={1347–1351}
+}
+
+@ARTICLE{2015ApJ_799_168D,
+       author = {{Dobler}, Gregory and {Fassnacht}, Christopher D. and {Treu}, Tommaso and {Marshall}, Phil and {Liao}, Kai and {Hojjati}, Alireza and {Linder}, Eric and {Rumbaugh}, Nicholas},
+        title = "{Strong Lens Time Delay Challenge. I. Experimental Design}",
+      journal = {The Astrophysical Journal},
+     keywords = {gravitational lensing: strong, methods: data analysis},
+         year = 2015,
+        month = feb,
+       volume = {799},
+       number = {2},
+          eid = {168},
+        pages = {168},
+          doi = {10.1088/0004-637X/799/2/168},
+       url = {https://ui.adsabs.harvard.edu/abs/2015ApJ...799..168D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011MNRAS_410_2167F,
+       author = {{Fassnacht}, C.~D. and {Koopmans}, L.~V.~E. and {Wong}, K.~C.},
+        title = "{Galaxy number counts and implications for strong lensing}",
+      journal = {Monthly Notices of the Royal Astronomical Society},
+     keywords = {gravitational lensing: strong, distance scale, large-scale structure of Universe, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2011,
+        month = feb,
+       volume = {410},
+       number = {4},
+        pages = {2167-2179},
+          doi = {10.1111/j.1365-2966.2010.17591.x},
+archivePrefix = {arXiv},
+       eprint = {0909.4301},
+ primaryClass = {astro-ph.CO},
+       url = {https://ui.adsabs.harvard.edu/abs/2011MNRAS.410.2167F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Millon_2020,
+   title={TDCOSMO. I. An exploration of systematic uncertainties in the inference of $H_0$ from time-delay cosmography},
+   volume={639},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201937351},
+   DOI={10.1051/0004-6361/201937351},
+   journal={Astronomy \& Astrophysics},
+   publisher={EDP Sciences},
+   author={Millon, M. and Galan, A. and Courbin, F. and Treu, T. and Suyu, S. H. and Ding, X. and Birrer, S. and Chen, G. C.-F. and Shajib, A. J. and Sluse, D. and et al.},
+   year={2020},
+   month={Jul},
+   pages={A101}
+}
+
+@ARTICLE{1990ApJ_358L_33W,
+       author = {{Wambsganss}, J. and {Paczynski}, B. and {Schneider}, P.},
+        title = "{Interpretation of the Microlensing Event in QSO 2237+0305}",
+      journal = {Astronomy \& Astrophysics},
+     keywords = {Gravitational Lenses, Quasars, Ultraviolet Spectra, Accretion Disks, Astronomical Models, Caustics (Optics), Luminosity, Astrophysics, GRAVITATIONAL LENSES, QUASARS, RELATIVITY},
+         year = 1990,
+        month = aug,
+       volume = {358},
+        pages = {L33},
+          doi = {10.1086/185773},
+       url = {https://ui.adsabs.harvard.edu/abs/1990ApJ...358L..33W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
